source/assets/files/elk-single-node/log-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk
spec:
  ports:
  - port: 9600
    name: monitoring
  - port: 5044
    name: logstash
  - port: 514
    name: rsyslog
  clusterIP: None
  selector:
    app: logstash
