source/assets/files/elk-single-node/es-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elk
spec:
  rules:
  - host: es.api.staging.keep.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
