source/assets/files/elk-single-node/kb-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
spec:
  rules:
  - host: kibana.api.staging.keep.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
